--- a/attendence.html
+++ b/attendence.html
@@ -420,6 +420,8 @@
         alert('Entry Stored!');
 
         updateButtonStates();
+        document.getElementById("nameInput").innerHTML = ''
+        document.getElementById("reasonInput").innerHTML = ''
     }
 
     function loadEntries() {
